tetrate/tis1601/e2e/bad-resource.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-virtual-service-bad
  namespace: default
spec:
  hosts:
  - "my-app.example.com"
  http:
  - route:
    - destination:
        host: "my-app-service.non-existent-namespace.svc.cluster.local"
