tetrate/tis1601/e2e/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-virtualservice-namespace
spec:
  validationFailureAction: Enforce
