tetrate/tis1601/e2e/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: check-fips-registry
spec:
  steps:
    - name: apply-rbac-policy
      try:
        - apply:
            file: rbac-policy.yaml

    - name: apply-fips-policy
      try:
        - apply:
            file: ../validate-virtualservice-namespace.yaml
        - assert:
            file: policy-assert.yaml

    - name: apply-good-deployment
      try:
        - apply:
            file: good-resource.yaml

    - name: apply-bad-deployment (should fail)
      try:
        - apply:
            expect:
              - check:
                  ($error != null): true
            file: bad-resource.yaml
